# puzzle-dsl-interpreter

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENCE  Makefile  Readme.md  Taskfile.yaml  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json
works/: .editorconfig  .gitignore  Makefile  Taskfile.yaml  pyproject.toml  setup.sh
works/puzzle_dsl_interpreter/: main.py
works/puzzle_dsl_interpreter/definitions/: PuzzleDSLLexer.g4  PuzzleDSLParser.g4  PuzzleDSLParser.json
works/puzzle_dsl_interpreter/errors/: error.py
works/puzzle_dsl_interpreter/generator/: PuzzleDSLRandomGenerator.py  constants.py  rules.py  token.py
works/puzzle_dsl_interpreter/generator/definitions/: constants.py  errors.py  rules.py  token.py
works/puzzle_dsl_interpreter/generator/helpers/: instant_rule.py  operators.py  token.py
works/puzzle_dsl_interpreter/generator/stores/: context.py  store.py  variables.py
works/puzzle_dsl_interpreter/interpreter/: CustomPuzzleDSLParserListener.py  CustomPuzzleDSLParserVisitor.py  PuzzleDSLInterpreter.py  errors.py
works/puzzle_dsl_interpreter/members/: domain.py  utils.py
works/puzzle_dsl_interpreter/poc/: gen_test.py  interp_test.py  poc.py  test.py
works/rules/: chocobanana.pzl  fillomino.pzl  hitori.pzl  inshi_no_heya.pzl  kurotto.pzl  norinori.pzl  shikaku.pzl  slitherlink.pzl  sudoku.pzl  sukoro.pzl
works/scripts/: all_test.sh  convert_head_spaces_to_tabs.py  convert_tabs_to_spaces.sh  output_escape_sequence.py
works/tests/generator/: test_token.py
(+6 files in other folders)
