[tool.poetry]
name = "puzzle dsl interpreter"
version = "0.1.0"
description = "This is a language for describing puzzle rules. See Readme in root directory for more information."
authors = ["itk"]
packages = [
    { include = "puzzle_dsl_interpreter"}
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
antlr4-python3-runtime = "^4.13.1"
exrex = "^0.11.0"
numpy = "^2.1.0"
rich = "^13.8.0"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
